# G4minWE

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.new  README.md  main.cc
include/: ActionInitialiser.hh  EventAction.hh  actionInitialiser.hh  detectorConstruction.hh  eventAction.hh  hit.hh  primaryParticleAction.hh  runAction.hh  sensitiveDetector.hh
mac/: run.mac  run_highStatistic.mac  vis.mac  vis_run.mac
src/: ActionInitialiser.cc  EventAction.cc  RunAction.cc  actionInitialiser.cc  detectorConstruction.cc  eventAction.cc  hit.cc  primaryParticleAction.cc  runAction.cc  sensitiveDetector.cc
